# project-starter-v2

./: .env.example  .gitignore  .sql-formatter.json  Cargo.toml  README.md  typeshare.toml
common/: Cargo.toml
common/src/: api.rs  lib.rs  utils.rs
common/src/api/: error.rs  mod.rs  response.rs
common/src/model/: interaction.rs  locale.rs  mod.rs  ws_msg.rs
common/src/utils/: env.rs  mod.rs  runtime.rs  tracing.rs
db/migrations/: 20250912072919_init.sql
scripts/: gen_types.sh
svelte/: package.json  svelte.config.js  vite.config.ts
svelte/messages/: en.json  zh-tw.json
svelte/project.inlang/: project_id
svelte/src/: app.css  app.html  service-worker.ts
svelte/src/lib/: api.ts
svelte/src/lib/pages/: index.ts  intro.svelte
svelte/src/lib/states/: index.ts  input.svelte.ts  sys.svelte.ts
svelte/src/lib/states/sys/: dialog.svelte.ts  index.ts  sys.svelte.ts  timer.svelte.ts
svelte/src/lib/types/: shared.ts
svelte/src/routes/: +layout.svelte  +page.svelte
svelte/static/: manifest.json
web/: Cargo.toml
web/src/: config.rs  init.rs  main.rs  route.rs  state.rs  tls.rs
web/src/handler/: health.rs  interaction.rs  mod.rs  ws.rs
yaak/: yaak.fl_vFYSJtr5kV.yaml  yaak.rq_s8pqJxNTMo.yaml  yaak.rq_xB9mj5FU5t.yaml  yaak.wk_gHw6EPFBVz.yaml  yaak.wr_p8Q2t9S9aA.yaml
