[workspace]
members = ["web", "common"]
resovler = "2"

[workspace.dependencies]
common = { path = "./common" }
tracing = "0.1.41"
sqlx = { version = "0.8.6", features = [
	"uuid",
	"postgres",
	"chrono",
	"runtime-tokio",
	"tls-native-tls",
] }
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
anyhow = "1.0.99"
axum = "0.8.4"
futures = "0.3.31"
http = "1.3.1"
serde_json = "1.0.142"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
