[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
sqlx = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
axum_typed_multipart = { workspace = true }
regex = "1.11.2"
typeshare = "1.0.4"
project-root = "0.2.2"
dotenvy = "0.15.7"
