[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {workspace = true}
anyhow = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
axum = {workspace = true, features = ["ws", "macros"]}
sqlx = {workspace = true}
futures = {workspace = true}
tracing = {workspace = true}
axum_typed_multipart = {workspace = true}
uuid = {workspace = true}
colored = {workspace = true}
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
rustls = { version = "0.23.31", features = ["ring"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
